// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`横向排列选项 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > label {
  padding-right: 8px;
}

.c0 > label:last-child {
  padding-right: 0px;
}

.c0 > label {
  -webkit-transform: translate(-11px,0px);
  -ms-transform: translate(-11px,0px);
  transform: translate(-11px,0px);
}

<div
  className="c0 sinoui-form-group"
/>
`;

exports[`纵向3列排列选项 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > label {
  padding-right: 8px;
}

.c0 > label:last-child {
  padding-right: 0px;
}

.c0 > label {
  width: 33.333333333333336%;
}

.c0 > label {
  -webkit-transform: translate(-11px,0px);
  -ms-transform: translate(-11px,0px);
  transform: translate(-11px,0px);
}

<div
  className="c0 sinoui-form-group"
/>
`;

exports[`纵向排列选项 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > label {
  padding-right: 8px;
}

.c0 > label:last-child {
  padding-right: 0px;
}

.c0 > label {
  width: 100%;
}

.c0 > label {
  -webkit-transform: translate(-11px,0px);
  -ms-transform: translate(-11px,0px);
  transform: translate(-11px,0px);
}

<div
  className="c0 sinoui-form-group"
/>
`;
